--- a/apendice2.tex
+++ b/apendice2.tex
@@ -65,13 +65,13 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \input stratsBalAccRF
 % \end{landscape}\clearpage}
 
-\subsection{VFDT}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaVFDTRedux
-\end{landscape}\clearpage}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccVFDT
-% % \end{landscape}\clearpage}
+% \subsection{VFDT}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaVFDTRedux
+% \end{landscape}\clearpage}
+% % % \afterpage{\clearpage\begin{landscape}
+% % % \input stratsBalAccVFDT
+% % % \end{landscape}\clearpage}
 
 \subsection{SVM}
 \afterpage{\clearpage\begin{landscape}
