--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1688,3 +1688,12 @@ keywords = "Meta-learning systems "
   \URL =         "http://portal.acm.org/citation.cfm?id=1859921",
 }
 
+ @article{Hochbaum1985,
+    author = {Hochbaum and Shmoys},
+    journal = {Mathematics of Operations Research},
+    number = {2},
+    pages = {180-184},
+    title = {A best possible heuristic for the k-center problem},
+    volume = {10},
+    year = {1985}
+ }
