--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,4 +1,6 @@
 \section{Análise comparativa geral}\label{geral}
+
+\ano{fazer análise adicional do SVM só com problemas binários}
 O algoritmo de aprendizado mais adequado para um dado problema normalmente não
 é conhecido até que se tenha um conjunto de treinamento suficientemente grande para
 a realização de uma validação cruzada \ano{ref?}.
