--- a/tese.tex
+++ b/tese.tex
@@ -228,10 +228,10 @@
 \chapter*{Abreviaturas}
 \addcontentsline{toc}{section}{Abreviaturas} %ver comando do rigolin para criar links e outras
 \begin{acronym}
-\acro{SMOOTE}{Synthetic Minority Over-sampling TEchnique} \acro{QoS }{Quality of Service}
-\acro{DDM}{\textit{Drift Detection Method}}
-\acro{AWE}{\textit{Drift Detection Method}}
-\acro{SEA}{\textit{Streaming Ensemble Algorithm}}
+\acro{$ID$}{densidade de informação}
+% $TU$ utilidade de treinamento
+% $d(\bm{x},\bm{u})$ medida de distância
+% $sim(\bm{x},\bm{u})$ medida de similaridade
 \end{acronym}
 \cleardoublepage
 
