--- a/stratsALCKappaSVMRedux.tex
+++ b/stratsALCKappaSVMRedux.tex
@@ -80,7 +80,7 @@
 34-mammographic mass &   0.54/\textcolor{black}{\textbf{  0.04}} &   0.53/  0.05 &   0.53/  0.05 &   0.53/  0.05 &   0.54/  0.05 &   0.51/  0.07 &   0.51/  0.06 & \textcolor{red}{\textbf{  0.48}}/  0.07 &   0.53/  0.05 &   0.52/  0.05 &   0.54/\textcolor{black}{\textbf{  0.04}} \\
 35-mfeat fourier &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.52/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.33}}/  0.08 &   0.52/  0.05 &   0.38/  0.03 &   0.52/  0.05 &   0.53/  0.03 &   0.52/\textcolor{black}{\textbf{  0.02}} \\
 36-molecular promotor... &   0.52/  0.09 &   0.48/  0.09 &   0.47/  0.08 &   0.46/\textcolor{black}{\textbf{  0.06}} &   0.50/  0.08 &   0.47/  0.10 &   0.47/  0.10 &   0.47/  0.07 &   0.50/  0.10 &   0.50/  0.08 &   0.52/  0.08 \\
-37-molecular splice j... &   0.60/  0.05 &   0.61/  0.03 &   0.62/  0.02 &   0.63/  0.03 &   0.61/  0.02 &   0.57/  0.08 & \textcolor{black}{\textbf{  0.64}}/  0.04 &   0.30/  0.04 &   0.61/  0.11 & \underline{\textcolor{blue}{\textbf{  0.65}}}/  0.05 &   0.60/  0.05 \\
+37-molecular splice j... &   0.60/  0.05 &   0.61/  0.03 &   0.62/\textcolor{black}{\textbf{  0.02}} &   0.63/  0.03 &   0.61/\textcolor{black}{\textbf{  0.02}} &   0.57/  0.08 &   0.64/  0.04 & \textcolor{red}{\textbf{  0.30}}/  0.04 &   0.61/  0.11 &   0.65/  0.05 &   0.60/  0.05 \\
 38-monks1 &   0.50/  0.06 &   0.48/  0.07 &   0.47/  0.05 &   0.48/  0.05 &   0.49/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \textcolor{red}{\textbf{  0.33}}/  0.05 & \textcolor{black}{\textbf{  0.57}}/  0.07 &   0.55/  0.06 &   0.50/  0.06 \\
 39-monks2 &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 & \textcolor{red}{\textbf{ -0.02}}/  0.02 &  -0.01/  0.02 &  -0.01/  0.03 &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &   0.00/  0.02 &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} \\ \hline
 40-monks3 & \textcolor{red}{\textbf{  0.76}}/  0.05 &   0.77/\textcolor{black}{\textbf{  0.03}} &   0.77/  0.04 &   0.77/  0.04 &   0.77/  0.04 &   0.79/  0.04 &   0.79/  0.04 &   0.78/  0.04 &   0.79/  0.05 &   0.79/  0.04 & \textcolor{red}{\textbf{  0.76}}/  0.05 \\
@@ -102,7 +102,7 @@
 56-robot nav sensor r... &   0.74/  0.03 &   0.77/  0.02 &   0.77/  0.02 &   0.77/  0.02 &   0.77/  0.02 &   0.71/  0.03 &   0.74/  0.03 & \textcolor{red}{\textbf{  0.54}}/  0.05 &   0.79/  0.02 & \textcolor{blue}{\textbf{  0.80}}/  0.02 &   0.74/  0.03 \\
 57-saheart &   0.20/  0.08 &   0.20/\textcolor{black}{\textbf{  0.06}} & \textcolor{black}{\textbf{  0.22}}/  0.07 &   0.19/  0.07 &   0.19/  0.08 &   0.21/\textcolor{black}{\textbf{  0.06}} &   0.21/\textcolor{black}{\textbf{  0.06}} & \textcolor{red}{\textbf{  0.11}}/\textcolor{darkgreen}{\textbf{  0.04}} &   0.21/  0.07 &   0.18/\textcolor{black}{\textbf{  0.06}} &   0.20/  0.08 \\
 58-seeds &   0.82/  0.06 &   0.84/\textcolor{black}{\textbf{  0.05}} &   0.84/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.05}} &   0.84/  0.06 & \textcolor{red}{\textbf{  0.80}}/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.81/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.82/\textcolor{black}{\textbf{  0.05}} \\
-59-semeion &   0.58/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.47/  0.11 &   0.55/  0.11 &   0.46/  0.09 & \textcolor{black}{\textbf{  0.60}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.61}}}/  0.02 & \textcolor{red}{\textbf{ -2.00}} \\
+59-semeion &   0.58/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.59/  0.02 &   0.58/  0.02 &   0.47/  0.11 &   0.55/  0.11 &   0.46/  0.09 & \textcolor{black}{\textbf{  0.60}}/  0.04 & \underline{\textcolor{blue}{\textbf{  0.61}}}/  0.02 & \textcolor{red}{\textbf{ -9.00}} \\
 60-spambase &   0.59/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 &   0.62/\textcolor{darkgreen}{\textbf{  0.02}} &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.61/\textcolor{black}{\textbf{  0.03}} &   0.63/  0.06 &   0.63/  0.06 & \textcolor{red}{\textbf{  0.50}}/  0.06 &   0.62/  0.05 &   0.61/  0.04 &   0.59/\textcolor{black}{\textbf{  0.03}} \\ \hline
 61-spect heart &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.25/  0.07 & \textcolor{black}{\textbf{  0.26}}/  0.07 &   0.24/  0.07 & \textcolor{black}{\textbf{  0.26}}/  0.07 &   0.24/  0.07 &   0.24/  0.07 & \textcolor{red}{\textbf{  0.22}}/\textcolor{black}{\textbf{  0.06}} &   0.25/  0.07 &   0.24/\textcolor{black}{\textbf{  0.06}} &   0.25/\textcolor{black}{\textbf{  0.06}} \\
 62-spectf heart & \textcolor{black}{\textbf{  0.13}}/  0.09 &   0.10/  0.06 & \textcolor{black}{\textbf{  0.13}}/  0.09 & \underline{\textcolor{blue}{\textbf{  0.17}}}/  0.11 & \textcolor{black}{\textbf{  0.13}}/  0.09 &   0.10/\textcolor{black}{\textbf{  0.05}} &   0.09/\textcolor{black}{\textbf{  0.05}} &   0.10/\textcolor{black}{\textbf{  0.05}} &   0.11/  0.06 &   0.11/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.13}}/  0.09 \\
@@ -117,7 +117,7 @@
 34-mammographic mass &   0.51/  0.05 &   0.54/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.55}}/  0.05 & \textcolor{blue}{\textbf{  0.55}}/\textcolor{black}{\textbf{  0.04}} &   0.54/  0.05 &   0.52/  0.05 &   0.53/\textcolor{black}{\textbf{  0.04}} \\
 35-mfeat fourier & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.55}}}/  0.03 &   0.53/  0.03 &   0.53/\textcolor{black}{\textbf{  0.02}} &   0.53/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.02}} &   0.39/  0.03 &   0.40/  0.05 \\
 36-molecular promotor... & \textcolor{black}{\textbf{  0.56}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.59}}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.09 & \textcolor{red}{\textbf{  0.45}}/  0.10 & \textcolor{red}{\textbf{  0.45}}/\textcolor{black}{\textbf{  0.06}} &   0.49/  0.09 &   0.47/  0.07 &   0.49/  0.07 \\
-37-molecular splice j... & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.62/  0.03 &   0.62/  0.03 \\
+37-molecular splice j... &   0.64/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.67}}}/\textcolor{black}{\textbf{  0.02}} &   0.60/  0.12 & \textcolor{black}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.02}} &   0.64/  0.08 &   0.62/  0.03 &   0.62/  0.03 \\
 38-monks1 &   0.49/  0.07 &   0.56/  0.08 & \textcolor{black}{\textbf{  0.57}}/  0.06 & \underline{\textcolor{blue}{\textbf{  0.59}}}/  0.05 &   0.56/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.04}} &   0.47/  0.08 &   0.45/  0.08 \\
 39-monks2 &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &   0.00/\textcolor{black}{\textbf{  0.01}} &  -0.01/\textcolor{black}{\textbf{  0.01}} &  -0.01/  0.02 &  -0.01/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.05}}/  0.07 & \underline{\textcolor{blue}{\textbf{  0.07}}}/  0.05 \\ \hline
 40-monks3 &   0.77/  0.05 & \underline{\textcolor{blue}{\textbf{  0.81}}}/  0.04 &   0.78/  0.05 &   0.79/  0.04 &   0.78/  0.04 &   0.79/  0.04 & \textcolor{black}{\textbf{  0.80}}/  0.04 &   0.79/\textcolor{black}{\textbf{  0.03}} \\
@@ -139,7 +139,7 @@
 56-robot nav sensor r... &   0.78/  0.02 &   0.79/  0.02 &   0.79/  0.02 &   0.79/\textcolor{black}{\textbf{  0.01}} &   0.79/  0.02 & \textcolor{blue}{\textbf{  0.80}}/\textcolor{black}{\textbf{  0.01}} &   0.59/  0.05 &   0.64/  0.05 \\
 57-saheart & \textcolor{black}{\textbf{  0.22}}/  0.08 & \textcolor{black}{\textbf{  0.22}}/  0.07 &   0.20/  0.07 &   0.20/  0.08 &   0.18/  0.08 &   0.19/\textcolor{black}{\textbf{  0.06}} & \underline{\textcolor{blue}{\textbf{  0.25}}}/  0.07 &   0.21/  0.07 \\
 58-seeds &   0.82/\textcolor{black}{\textbf{  0.05}} &   0.81/\textcolor{black}{\textbf{  0.05}} &   0.83/\textcolor{black}{\textbf{  0.05}} &   0.84/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.85}}/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.85}}/  0.06 &   0.83/\textcolor{black}{\textbf{  0.05}} & \underline{\textcolor{blue}{\textbf{  0.86}}}/\textcolor{black}{\textbf{  0.05}} \\
-59-semeion & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} & \textcolor{red}{\textbf{ -2.00}} &   0.57/  0.03 &   0.58/  0.03 \\
+59-semeion & \textcolor{red}{\textbf{ -9.00}} & \textcolor{red}{\textbf{ -9.00}} & \textcolor{red}{\textbf{ -9.00}} & \textcolor{red}{\textbf{ -9.00}} & \textcolor{red}{\textbf{ -9.00}} & \textcolor{red}{\textbf{ -9.00}} &   0.57/  0.03 &   0.58/  0.03 \\
 60-spambase &   0.63/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.65}}/  0.04 & \textcolor{black}{\textbf{  0.65}}/\textcolor{black}{\textbf{  0.03}} &   0.63/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.66}}}/\textcolor{black}{\textbf{  0.03}} &   0.60/\textcolor{black}{\textbf{  0.03}} &   0.61/  0.04 \\ \hline
 61-spect heart &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.25/  0.07 &   0.24/  0.08 &   0.25/\textcolor{black}{\textbf{  0.06}} &   0.24/  0.08 &   0.25/  0.07 & \textcolor{black}{\textbf{  0.26}}/  0.08 & \underline{\textcolor{blue}{\textbf{  0.29}}}/  0.09 \\
 62-spectf heart &   0.10/  0.06 &   0.12/  0.06 &   0.10/\textcolor{black}{\textbf{  0.05}} &   0.09/\textcolor{black}{\textbf{  0.05}} &   0.11/  0.07 &   0.09/  0.06 &   0.07/\textcolor{black}{\textbf{  0.05}} & \textcolor{red}{\textbf{  0.05}}/\textcolor{black}{\textbf{  0.05}} \\
